--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architects</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
-    <header></header>
-    <main></main>
+<body class="work-sans-font">
+    <header class="bg-banner">
+        <nav class="navbar">
+            <h3 class="nav-title">G3 Architects</h3>
+            <ul class="nav-links">                                              
+                <li class="nav-item"><a href="" class="link">Home</a></li>
+                <li class="nav-item"><a href="" class="link">About</a></li>
+                <li class="nav-item"><a href="" class="link">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="link">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New<br>Group of Architects</h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>            
+                <img class="banner-img" src="./images/banner.png" alt="">
+            
+        </div>
+    </header>
+
+    <!-- main part section start here -->
+    <main>
+
+        <section class="quick-list">
+            <div class="quick-img-container">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
+            </div>
+            <div class="quick-list-content">
+                <h3 class="section-title"><span id="part-1">Quick list</span> of Our <span id="part-3">Features</span></h3>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
-</html>
+</html> 
