--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- main part section start here -->
     <main>
-
+        <!--quick list section -->
         <section class="quick-list">
             <div class="quick-img-container">
                 <img src="./images/team1.png" alt="">
@@ -44,6 +44,8 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+
+
     </main>
     <footer></footer>
 </body>
