added a new section called some facts

--- a/index.html
+++ b/index.html
@@ -45,8 +45,36 @@
             </div>
         </section>
 
+        <!-- part 3 = some facts -->
+        <section class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            <div class="cards-container">
+                <div class="card">
+                    <img src="./images/icons/ribon.png" alt="">
+                    <h4>54</h4>
+                    <h5>Awards Winnings</h5>
+                </div>
+                <div class="card">
+                    <img src="./images/icons/projects.png" alt="">
+                    <h4>1458</h4>
+                    <h5>Project Finished</h5>
+                </div>
+                <div class="card">
+                    <img src="./images/icons/customers.png" alt="">
+                    <h4>590</h4>
+                    <h5>Clients Worked</h5>
+                </div>
+                <div class="card">
+                    <img src="./images/icons/email.png" alt="">
+                    <h4>22578</h4>
+                    <h5>Email Send</h5>
+                </div>
+            </div>
+        </section>
 
     </main>
-    <footer></footer>
+    <footer></footer> 
 </body>
-</html> 
+</html>  
